--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -786,7 +786,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -842,5 +842,14 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Learning paths": "Tanul\u00e1si programok",
+    "Links": "Hivatkoz\u00e1sok",
+    "Tests": "Tesztek",
+    "Announcements": "Hirdetm\u00e9nyek",
+    "Forum": "F\u00f3rumok",
+    "Wiki": "Wiki",
     "Contact support": "Contact support"
 }
