--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -677,7 +677,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -733,5 +733,20 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "\u30a4\u30d9\u30f3\u30c8",
+    "Diagnosis Management": "Diagnosis Management",
+    "Learning paths": "\u5b66\u7fd2\u30d1\u30b9",
+    "Links": "\u30ea\u30f3\u30af",
+    "Tests": "\u30c6\u30b9\u30c8",
+    "Announcements": "\u304a\u77e5\u3089\u305b",
+    "Forum": "\u30d5\u30a9\u30fc\u30e9\u30e0",
+    "Surveys": "\u610f\u898b\u8abf\u67fb",
+    "Wiki": "Wiki",
+    "Glossary": "\u7528\u8a9e\u96c6",
+    "Notebook": "\u30ce\u30fc\u30c8\u30d6\u30c3\u30af",
+    "Attendances": "\u51fa\u5e2d",
+    "Course progress": "\u30b3\u30fc\u30b9\u306e\u9032\u884c\u72b6\u6cc1",
     "Contact support": "Contact support"
 }
