--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -882,7 +882,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -938,5 +938,22 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Notikumi",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Kursa apraksts",
+    "Learning paths": "M\u0101c\u012bbu gaita",
+    "Links": "Ievietot Hipersai\u0161u arh\u012bv\u0101 eso\u0161as t\u012bmek\u013ca hipersaites",
+    "Tests": "Kontroldarbi",
+    "Announcements": "Pazi\u0146ojumi kursa lietot\u0101jiem",
+    "Forum": "Diskusijas kurs\u0101",
+    "Surveys": "Aptaujas",
+    "Wiki": "Wiki grupa",
+    "Glossary": "Terminu skaidrojumu v\u0101rdn\u012bca",
+    "Notebook": "Person\u012bg\u0101s piez\u012bmes",
+    "Attendances": "Kl\u0101tienes nodarb\u012bbas",
+    "Course progress": "Kursa apguves tematiskais pl\u0101ns",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Apm\u0101c\u012bbas autom\u0101tisk\u0101s palai\u0161anas iestat\u012bjums ir IESL\u0112GTS. <br>Kad studenti atv\u0113rs \u0161o kursu, tie tiks autom\u0101tiski virz\u012bti apm\u0101c\u012bbas proces\u0101.",
     "Contact support": "Contact support"
 }
