--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -661,7 +661,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -717,5 +717,20 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Mga Event",
+    "Diagnosis Management": "Diagnosis Management",
+    "Learning paths": "Mga learning path",
+    "Links": "Mga Link",
+    "Tests": "Mga Pagsusulit",
+    "Announcements": "Mga Anunsyo",
+    "Forum": "Forum",
+    "Surveys": "Mga Sarbey",
+    "Wiki": "Wiki",
+    "Glossary": "Talahulugan",
+    "Notebook": "Notebook",
+    "Attendances": "Mga Pagdalo",
+    "Course progress": "Progreso ng kurso",
     "Contact support": "Contact support"
 }
