--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -768,7 +768,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -824,5 +824,18 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Learning paths": "\u5b66\u4e60\u8def\u5f84",
+    "Links": "\u94fe\u63a5",
+    "Tests": "\u6d4b\u9a8c",
+    "Announcements": "\u5e03\u544a",
+    "Forum": "\u8bba\u575b",
+    "Surveys": "\u8c03\u67e5",
+    "Glossary": "\u8bcd\u6c47\u8868",
+    "Notebook": "\u7b14\u8bb0\u672c",
+    "Attendances": "\u8003\u52e4",
+    "Course progress": "\u8bfe\u7a0b\u8fdb\u5ea6",
     "Contact support": "Contact support"
 }
