--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -982,7 +982,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1038,5 +1038,26 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "\u0627\u0644\u0627\u062d\u062f\u0627\u062b",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "\u0648\u0635\u0641 \u0627\u0644\u0645\u0642\u0631\u0631",
+    "Learning paths": " \u0645\u0633\u0627\u0631 \u062a\u0639\u0644\u064a\u0645\u064a",
+    "Links": " \u0631\u0648\u0627\u0628\u0637",
+    "Tests": " \u0627\u0644\u0625\u062e\u062a\u0628\u0627\u0631\u0627\u062a",
+    "Announcements": "\u0627\u0644\u062a\u0628\u0644\u064a\u063a\u0627\u062a",
+    "Forum": "\u0627\u0644\u0645\u0646\u062a\u062f\u0649",
+    "Surveys": "\u0627\u0644\u0627\u0633\u062a\u0628\u064a\u0627\u0646\u0627\u062a",
+    "Wiki": "\u0627\u0644\u0648\u064a\u0643\u064a",
+    "Glossary": "\u0642\u0627\u0645\u0648\u0633",
+    "Notebook": "\u062f\u0641\u062a\u0631 \u0627\u0644\u0645\u0644\u0627\u062d\u0638\u0627\u062a",
+    "Attendances": "\u0627\u0644\u062d\u0636\u0648\u0631",
+    "Course progress": "\u0627\u0644\u062a\u0642\u062f\u0645 \u0641\u064a \u0627\u0644\u0645\u0642\u0631\u0631",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "\u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0644\u0645\u0646\u062a\u062f\u0649 \u0645\u0641\u0639\u0644\u0629\u060c \u0627\u0630 \u0633\u064a\u062a\u0645 \u0627\u0639\u0627\u062f\u0629 \u062a\u0648\u062c\u064a\u0647 \u0627\u0644\u0637\u0644\u0628\u0629 \u0627\u0644\u0649 \u0627\u062f\u0627\u0629 \u0627\u0644\u0645\u0646\u062a\u062f\u0649 \u0639\u0646\u062f \u062f\u062e\u0648\u0644 \u0627\u0644\u0645\u0642\u0631\u0631",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "\u0627\u0646 \u062e\u0627\u0635\u064a\u0629 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0645\u0641\u0639\u0644\u0629\u060c \u0648\u0644\u0630\u0627 \u0641\u0627\u0646 \u0627\u0644\u0637\u0644\u0628\u0629 \u0633\u0648\u0641 \u064a\u062a\u0645 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u062a\u0644\u0642\u0627\u0626\u064a\u0627 \u0627\u0644\u0649 \u0627\u0644\u062a\u0645\u0631\u064a\u0646 \u0627\u0644\u0645\u062d\u062f\u062f",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "\u0627\u0646 \u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u0639\u0644\u0645 \u0645\u0641\u0639\u0644\u0629\u0640 \u0648\u0628\u0627\u0644\u062a\u0627\u0644\u064a \u0641\u0627\u0646 \u0639\u0646\u062f \u062f\u062e\u0648\u0644 \u0627\u0644\u0637\u0644\u0628\u0629 \u0644\u0644\u0645\u0642\u0631\u0631 \u0641\u0633\u0648\u0641 \u064a\u062a\u0645 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u062a\u0644\u0642\u0627\u0626\u064a\u0627 \u0627\u0644\u0649 \u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u0639\u0644\u0645 \u0630\u0648 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "\u062e\u0627\u0635\u064a\u0629 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0644\u0645\u0633\u062a\u0646\u062f\u0627\u062a \u0645\u0641\u0639\u0644\u0629\u060c \u0648\u0628\u0627\u0644\u062a\u0627\u0644\u064a \u0641\u0627\u0646 \u0627\u0644\u0637\u0644\u0628\u0629 \u0633\u0648\u0641 \u064a\u062a\u0645 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u062a\u0644\u0642\u0627\u0626\u064a\u0627 \u0627\u0644\u0649 \u0627\u062f\u0627\u0629 \u0627\u0644\u0645\u0633\u062a\u0646\u062f",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "\u0627\u0646 \u062e\u0627\u0635\u064a\u0629 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0644\u0644\u062a\u0645\u0627\u0631\u064a\u0646 \u0645\u0641\u0639\u0644\u0629\u060c \u0648\u0628\u0627\u0644\u062a\u0627\u0644\u064a \u0641\u0627\u0646 \u0627\u0644\u0637\u0644\u0628\u0629 \u0633\u0648\u0641 \u064a\u062a\u0645 \u0627\u0639\u0627\u062f\u0629 \u062a\u0648\u062c\u064a\u0647\u0647\u0645 \u0645\u0628\u0627\u0634\u0631\u0629 \u0627\u0644\u0649 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u062a\u0645\u0627\u0631\u064a\u0646",
     "Contact support": "Contact support"
 }
