--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -827,7 +827,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -883,5 +883,17 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Descripci\u00f3n del cursu",
+    "Learning paths": "Itinerarios d'aprendizaxe",
+    "Links": "Enllaces",
+    "Tests": "Exercicios",
+    "Announcements": "Anuncies",
+    "Forum": "Foros",
+    "Wiki": "Wiki",
+    "Glossary": "Glosariu",
+    "Notebook": "Apuntes personales",
     "Contact support": "Contact support"
 }
