--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -836,7 +836,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -892,5 +892,20 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430",
+    "Learning paths": "\u041f\u044a\u0442\u0435\u043a\u0438 \u0437\u0430 \u043e\u0431\u0443\u0447\u0435\u043d\u0438\u0435",
+    "Links": "\u0412\u0440\u044a\u0437\u043a\u0438",
+    "Tests": "\u0422\u0435\u0441\u0442\u043e\u0432\u0435",
+    "Announcements": "\u041e\u0431\u044f\u0432\u0438",
+    "Forum": "\u0424\u043e\u0440\u0443\u043c\u0438",
+    "Surveys": "\u0410\u043d\u043a\u0435\u0442\u0438",
+    "Wiki": "Wiki",
+    "Glossary": "\u0422\u0435\u0440\u043c\u0438\u043d\u043e\u043b\u043e\u0433\u0438\u0447\u0435\u043d \u0440\u0435\u0447\u043d\u0438\u043a",
+    "Notebook": "\u0411\u0435\u043b\u0435\u0436\u043a\u0438",
+    "Attendances": "\u041f\u0440\u0438\u0441\u044a\u0441\u0442\u0432\u0438\u044f",
+    "Course progress": "\u041d\u0430\u043f\u0440\u0435\u0434\u044a\u043a \u0432 \u043a\u0443\u0440\u0441\u0430",
     "Contact support": "Contact support"
 }
