--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -938,7 +938,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -994,5 +994,24 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Esdeveniments",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Detalls del curs",
+    "Learning paths": "Itinerari formatiu",
+    "Links": "Enlla\u00e7os",
+    "Tests": "Exercicis",
+    "Announcements": "Avisos",
+    "Forum": "F\u00f2rums",
+    "Surveys": "Enquestes",
+    "Wiki": "Wiki",
+    "Glossary": "Glossari",
+    "Notebook": "Notes personals",
+    "Attendances": "Assist\u00e8ncia",
+    "Course progress": "Programaci\u00f3 did\u00e0ctica",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "El par\u00e0metre d'arrencada autom\u00e0tica del f\u00f2rum est\u00e0 activat. Els estudiants seran redirigits directament a l'eina de f\u00f2rum quan entrin a aquest curs.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "La configuraci\u00f3 per el desplegament autom\u00e0tic d'Exercicis est\u00e0 activada. Els estudiants seran redirigits a l'exercici seleccionat per que tal que es mostri autom\u00e0ticament.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "La configuraci\u00f3 per al desplegament autom\u00e0tic de lli\u00e7ons est\u00e0 activada. Quan els estudiants entrin al curs, seran redirigits a la lli\u00e7\u00f3 seleccionada perqu\u00e8 es desplegui autom\u00e0ticament.",
     "Contact support": "Contact support"
 }
