--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -51,7 +51,7 @@
     "Expiration date": "Verfallsdatum",
     "Modified": "Ver\u00e4ndert",
     "Size": "Gr\u00f6\u00dfe",
-    "New folder": "New folder",
+    "New folder": "Neue Datei",
     "Name": "Name",
     "Title is required": "\u00dcberschrift fehlt",
     "Actions": "Actions",
@@ -147,7 +147,7 @@
     "Yes": "Ja",
     "No": "Nein",
     "Confirm": "Best\u00e4tigen",
-    "No available options": "No available options",
+    "No available options": "Keine Optionen verf\u00fcgbar",
     "Pages": "Seiten",
     "Messages": "Nachrichten",
     "Enter filename here": "Namen hier eingeben",
@@ -338,7 +338,7 @@
     "Assignment updated": "Assignment updated",
     "Edit assignment": "Ausarbeitung bearbeiten",
     "Cancel": "Abbruch",
-    "Event": "Event",
+    "Event": "Eintrag",
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
     "Edit introduction": "Einf\u00fchrung bearbeiten",
     "Show all": "Alles zeigen",
@@ -638,7 +638,7 @@
     "Social group": "Soziale Gruppe",
     "Sessions plan calendar": "Kalender f\u00fcr Sitzungspl\u00e4ne",
     "My students schedule": "Mein Lernenden-Zeitplan",
-    "Color": "Color",
+    "Color": "Farbe",
     "Unmark favorite": "Unmark favorite",
     "Mark favorite": "Mark favorite",
     "Register student": "Register student",
@@ -993,7 +993,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "Alle Nachrichten hier werden automatisch als offiziell markiert.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1049,5 +1049,26 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnoseabschluss",
+    "DiagnosticfinalizationmessageContent": "Hallo {0}, ich bin {1} und \u00fcberpr\u00fcfe Ihre Diagnose, um den Kurs festzulegen, den Sie belegen werden.",
+    "Events": "Events",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Kursbeschreibung",
+    "Learning paths": "Lernpfad",
+    "Links": "Links",
+    "Tests": "Tests",
+    "Announcements": "Gruppen-Ank\u00fcndigungen",
+    "Forum": "Forum",
+    "Surveys": "Umfragen",
+    "Wiki": "Wiki",
+    "Glossary": "Lexikon",
+    "Notebook": "Notizbuch",
+    "Attendances": "Anwesenheiten",
+    "Course progress": "Kurs-Themen",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "Die Forum Auto-Start-Option ist aktiviert. Studenten werden beim Einloggen zu diesem Kurs auf das Forum-Tool weitergeleitet.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Das Feature zum automatischen Start der \u00dcbung ist aktiviert. Lernende werden automatisch zur ausgew\u00e4hlten \u00dcbung weitergeleitet.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Die Einstellung des Lernpfad-Umleitung ist ON. Falls Kursteilnehmer den Kurs betreten, werden diese zum genannten Lernpfad weitergeleitet.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "Die Konfiguration f\u00fcr die automatische Dokumentenstart-Funktion ist aktiviert. Lernende werden automatisch zum Dokumentenwerkzeug weitergeleitet.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "Die Konfiguration f\u00fcr die automatische Startfunktion von \u00dcbungen ist aktiviert. Lernende werden automatisch zur \u00dcbungsliste weitergeleitet.",
     "Contact support": "Contact support"
 }
