--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1050,8 +1050,8 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
-    "DiagnosticfinalizationmessageTitle": "DiagnosticfinalizationmessageTitle",
-    "DiagnosticfinalizationmessageContent": "DiagnosticfinalizationmessageContent",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
     "Events": "Events",
     "Diagnosis Management": "Diagnosis Management",
     "Course description": "Course description",
