--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -993,7 +993,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1049,5 +1049,26 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Finalizaci\u00f3n del diagn\u00f3stico",
+    "DiagnosticfinalizationmessageContent": "Hola {0}, soy {1} y estoy revisando tu diagn\u00f3stico para definir el curso que seguir\u00e1s.",
+    "Events": "Eventos",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Descripci\u00f3n del curso",
+    "Learning paths": "Lecciones",
+    "Links": "Enlaces",
+    "Tests": "Ejercicios",
+    "Announcements": "Anuncios",
+    "Forum": "Foro",
+    "Surveys": "Encuestas",
+    "Wiki": "Wiki",
+    "Glossary": "Glosario",
+    "Notebook": "Notas personales",
+    "Attendances": "Asistencia",
+    "Course progress": "Programaci\u00f3n did\u00e1ctica",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "El par\u00e1metro de arranque autom\u00e1tico del foro est\u00e1 activado. Los estudiantes ser\u00e1n redirigidos directamente a la herramienta de foro cuando entren a este curso.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "La configuraci\u00f3n para el despliegue autom\u00e1tico de Ejercicios est\u00e1 activada. Los estudiantes ser\u00e1n redirigidos al ejercicio seleccionado para que se muestre autom\u00e1ticamente.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "La configuraci\u00f3n para el despliegue autom\u00e1tico de Lecciones est\u00e1 activada. Los estudiantes ser\u00e1n redirigidos a la lecci\u00f3n seleccionada cuando entren al curso para que se muestre autom\u00e1ticamente.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "La funcionalidad de lanzamiento autom\u00e1tico de documentos est\u00e1 activada. Los estudiantes ser\u00e1n redirigidos autom\u00e1ticamente a la herramienta de documentos.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "La funcionalidad de lanzamiento autom\u00e1tico de ejercicios est\u00e1 activada. Los estudiantes ser\u00e1n autom\u00e1ticamente redirigidos a la lista de ejercicios.",
     "Contact support": "Contact support"
 }
