--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -901,7 +901,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -957,5 +957,23 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Gertaerak",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Ikastaroaren azalpena",
+    "Learning paths": "Ikaskuntza ibilbideak",
+    "Links": "Loturak",
+    "Tests": "Ariketak",
+    "Announcements": "Abisuak",
+    "Forum": "Foroa",
+    "Surveys": "Inkestak",
+    "Wiki": "Wiki",
+    "Glossary": "Glosarioa",
+    "Notebook": "Ohar bloka",
+    "Attendances": "Parte hartzeak",
+    "Course progress": "Ikastaroaren aurrerapena",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Ariketak automatikoki abiarazteko konfigurazioa aktibaturik dago. Ikasleak automatikoki bergidatuak izango dira aukeratutako ariketara.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Ikaskuntza ibilbideak automatikoki abiarazteko konfigurazioa aktibaturik dago. Ikastaro honetan sartzen direnean, ikasleak automatikoki bergidatuak izango dira markatutako ikaskuntza ibilbidera, horrela automatikoki abiaraziz.",
     "Contact support": "Contact support"
 }
