--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -840,7 +840,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -896,5 +896,23 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "\u0631\u0648\u06cc\u062f\u0627\u062f \u0647\u0627",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "\u062a\u0648\u0636\u06cc\u062d\u0627\u062a \u062f\u0631\u0633",
+    "Learning paths": "\u0645\u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc",
+    "Links": "\u067e\u06cc\u0648\u0646\u062f\u0647\u0627",
+    "Tests": "\u0622\u0632\u0645\u0648\u0646 \u0647\u0627",
+    "Announcements": "\u0627\u0637\u0644\u0627\u0639\u06cc\u0647 \u0647\u0627",
+    "Forum": "\u0627\u0646\u062c\u0645\u0646",
+    "Surveys": "\u0628\u0631\u0631\u0633\u06cc",
+    "Wiki": "\u0648\u06cc\u06a9\u06cc",
+    "Glossary": "\u0648\u0627\u0698\u0647 \u0646\u0627\u0645\u0647",
+    "Notebook": "\u06cc\u0627\u062f\u062f\u0627\u0634\u062a",
+    "Attendances": "\u062d\u0636\u0648\u0631 \u063a\u06cc\u0627\u0628",
+    "Course progress": "\u0631\u0648\u0646\u062f \u067e\u06cc\u0634\u0631\u0641\u062a \u062f\u0631\u0633",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "\u0642\u0627\u0628\u0644\u06cc\u062a \u0627\u062c\u0631\u0627\u06cc \u062e\u0648\u062f\u06a9\u0627\u0631 \u0627\u06cc\u0646 \u062a\u0645\u0631\u06cc\u0646 \u0641\u0639\u0627\u0644 \u0634\u062f\u0647 \u0627\u0633\u062a. \u062f\u0627\u0646\u0634\u062c\u0648\u06cc\u0627\u0646 \u0628\u0647 \u0635\u0648\u0631\u062a \u062e\u0648\u062f\u06a9\u0627\u0631 \u0628\u0647 \u062a\u0645\u0631\u06cc\u0646 \u0645\u0646\u062a\u062e\u0628 \u0647\u062f\u0627\u06cc\u062a \u062e\u0648\u0627\u0647\u0646\u062f \u0634\u062f.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u0631\u0627\u0647 \u0627\u0646\u062f\u0627\u0632\u06cc \u0627\u062a\u0648\u0645\u0627\u062a\u06cc\u06a9 \u0645\u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc \u0631\u0648\u0634\u0646 \u0647\u0633\u062a. \u0648\u0642\u062a\u06cc \u062f\u0627\u0646\u0634\u062c\u0648\u06cc\u0627\u0646 \u0648\u0627\u0631\u062f \u062f\u0631\u0633 \u0634\u0648\u0646\u062f\u060c \u0622\u0646\u0647\u0627 \u0628\u0635\u0648\u0631\u062a \u0627\u062a\u0648\u0645\u0627\u062a\u06cc\u06a9 \u0628\u0647 \u0645\u0633\u06cc\u0631 \u0622\u0645\u0648\u0632\u0634\u06cc \u06a9\u0647 \u0628\u0634\u06a9\u0644 \u0631\u0627\u0647 \u0627\u0646\u062f\u0627\u0632\u06cc \u0627\u062a\u0648\u0645\u0627\u062a\u06cc\u06a9 \u062f\u0631 \u0622\u0645\u062f\u0647 \u0627\u0633\u062a \u0647\u062f\u0627\u06cc\u062a \u062e\u0648\u0627\u0647\u0646\u062f \u0634\u062f.",
     "Contact support": "Contact support"
 }
