--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -783,7 +783,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -839,5 +839,21 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Kurssin kuvaus",
+    "Learning paths": "Learning Path",
+    "Links": "Linkit",
+    "Tests": "Testit",
+    "Announcements": "Ilmoitukset",
+    "Forum": "Keskustelut",
+    "Surveys": "Kyselyt",
+    "Wiki": "Wiki",
+    "Glossary": "Sanasto",
+    "Notebook": "Muistio",
+    "Attendances": "L\u00e4sn\u00e4",
+    "Course progress": "Kurssin edistyminen",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Oppimispolun automaattik\u00e4ynnistys on kytketty p\u00e4\u00e4lle. Kun opiskelija avaa kurssin h\u00e4net ohjataan automaattisesti oppimispolulle,joka on merkitty automaattisesti k\u00e4ynnistyv\u00e4ksi.",
     "Contact support": "Contact support"
 }
