--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -51,7 +51,7 @@
     "Expiration date": "Date d'expiration",
     "Modified": "Modifi\u00e9",
     "Size": "Taille",
-    "New folder": "New folder",
+    "New folder": "Nouveau dossier",
     "Name": "Nom",
     "Title is required": "Le titre est obligatoire",
     "Actions": "Actions",
@@ -147,7 +147,7 @@
     "Yes": "Oui",
     "No": "Non",
     "Confirm": "Confirmer",
-    "No available options": "No available options",
+    "No available options": "Aucune option disponible",
     "Pages": "Pages",
     "Messages": "Messages",
     "Enter filename here": "Introduisez le nom de l'enregistrement ici",
@@ -338,7 +338,7 @@
     "Assignment updated": "Assignment updated",
     "Edit assignment": "\u00c9diter ce document",
     "Cancel": "Annuler",
-    "Event": "Event",
+    "Event": "\u00c9v\u00e9nement",
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
     "Edit introduction": "\u00c9diter l'introduction",
     "Show all": "Afficher tout",
@@ -638,7 +638,7 @@
     "Social group": "Groupe social",
     "Sessions plan calendar": "Calendrier de planification des sessions",
     "My students schedule": "Horaire de mes \u00e9l\u00e8ves",
-    "Color": "Color",
+    "Color": "Couleur",
     "Unmark favorite": "Unmark favorite",
     "Mark favorite": "Mark favorite",
     "Register student": "Register student",
@@ -691,7 +691,7 @@
     "Or": "Or",
     "Preview": "Pr\u00e9visualiser",
     "Start date": "Date de d\u00e9but",
-    "End date": "date de fin",
+    "End date": "Date de fin",
     "Registered": "inscrit",
     "Select a course": "S\u00e9lectionnez un cours",
     "Go": "Go",
@@ -993,7 +993,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "Tous les messages ici sont automatiquement marqu\u00e9s comme officiels.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1049,5 +1049,26 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Finalisation du diagnostic",
+    "DiagnosticfinalizationmessageContent": "Bonjour {0}, je suis {1} et je suis en train de revoir votre diagnostic pour d\u00e9finir le cours que vous allez suivre.",
+    "Events": "\u00c9v\u00e9nements",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Description du cours",
+    "Learning paths": "Parcours d'apprentissage",
+    "Links": "Liens",
+    "Tests": "Exercices",
+    "Announcements": "Annonces",
+    "Forum": "Forums",
+    "Surveys": "Enqu\u00eates",
+    "Wiki": "Wiki",
+    "Glossary": "Glossaire",
+    "Notebook": "Notes",
+    "Attendances": "Pr\u00e9sences",
+    "Course progress": "Progression du cours",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "La fonctionnalit\u00e9 auto-d\u00e9marrage du forum est activ\u00e9e. Les apprenants seront redirig\u00e9s vers la liste de forums automatiquement lorsqu'ils entreront dans ce cours.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "La fonctionnalit\u00e9 d'auto-d\u00e9marrage des exercices est activ\u00e9e. Les apprenants seront automatiquement redirig\u00e9s vers l'exercice s\u00e9lectionn\u00e9.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Le param\u00e8tre d'auto-d\u00e9marrage des parcours d'apprentissage est activ\u00e9. Lorsque les apprenants entreront dans cet espace de cours, ils seront automatiquement redirig\u00e9s vers le parcours d'apprentissage s\u00e9lectionn\u00e9 pour l'auto-d\u00e9marrage.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "La fonctionnalit\u00e9 d'auto-d\u00e9marrage des documents est activ\u00e9e. Les apprenants seront automatiquement redirig\u00e9s vers l'outil documents.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "La fonctionnalit\u00e9 d'auto-d\u00e9marrage des exercices est activ\u00e9e. Les apprenants seront automatiquement redirig\u00e9s vers la liste des exercices.",
     "Contact support": "Contact support"
 }
