--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -974,7 +974,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1030,5 +1030,25 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "\u05ea\u05d9\u05d0\u05d5\u05e8 \u05d4\u05e7\u05d5\u05e8\u05e1",
+    "Learning paths": "\u05e0\u05ea\u05d9\u05d1\u05d9 \u05dc\u05de\u05d9\u05d3\u05d4",
+    "Links": "\u05e7\u05d9\u05e9\u05d5\u05e8\u05d9\u05dd",
+    "Tests": "\u05d1\u05d3\u05d9\u05e7\u05d5\u05ea",
+    "Announcements": "\u05d4\u05d5\u05d3\u05e2\u05d5\u05ea",
+    "Forum": "\u05e4\u05d5\u05e8\u05d5\u05dd",
+    "Surveys": "\u05e1\u05e7\u05e8\u05d9\u05dd",
+    "Wiki": "\u05d5\u05d9\u05e7\u05d9",
+    "Glossary": "\u05de\u05d9\u05dc\u05d5\u05df \u05de\u05d5\u05e0\u05d7\u05d9\u05dd",
+    "Notebook": "\u05de\u05d7\u05d1\u05e8\u05ea",
+    "Attendances": "\u05d4\u05d5\u05e4\u05e2\u05d5\u05ea",
+    "Course progress": "\u05d4\u05ea\u05e7\u05d3\u05de\u05d5\u05ea \u05d4\u05e7\u05d5\u05e8\u05e1",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d4\u05e4\u05d5\u05e8\u05d5\u05dd \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05d4\u05ea\u05dc\u05de\u05d9\u05d3\u05d9\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05dc \u05db\u05dc\u05d9 \u05d4\u05e4\u05d5\u05e8\u05d5\u05dd \u05d1\u05e2\u05ea \u05db\u05e0\u05d9\u05e1\u05d4 \u05dc\u05e7\u05d5\u05e8\u05e1 \u05d6\u05d4.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "\u05ea\u05e6\u05d5\u05e8\u05ea \u05ea\u05db\u05d5\u05e0\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d4\u05ea\u05e8\u05d2\u05d9\u05dc\u05d9\u05dd \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05ea\u05e8\u05d2\u05d9\u05dc \u05d4\u05e0\u05d1\u05d7\u05e8.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05e0\u05ea\u05d9\u05d1 \u05d4\u05dc\u05de\u05d9\u05d3\u05d4 \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05db\u05d0\u05e9\u05e8 \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05e7\u05d5\u05e8\u05e1 \u05d6\u05d4, \u05d4\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05e0\u05ea\u05d9\u05d1 \u05d4\u05dc\u05de\u05d9\u05d3\u05d4 \u05d4\u05de\u05e1\u05d5\u05de\u05df \u05db\u05d4\u05e4\u05e2\u05dc\u05d4 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "\u05ea\u05e6\u05d5\u05e8\u05ea \u05ea\u05db\u05d5\u05e0\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d4\u05de\u05e1\u05de\u05da \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05db\u05dc\u05d9 \u05d4\u05de\u05e1\u05de\u05db\u05d9\u05dd.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "\u05ea\u05e6\u05d5\u05e8\u05ea \u05ea\u05db\u05d5\u05e0\u05ea \u05d4\u05d4\u05e9\u05e7\u05d4 \u05d4\u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d4\u05ea\u05e8\u05d2\u05d9\u05dc\u05d9\u05dd \u05de\u05d5\u05e4\u05e2\u05dc\u05ea. \u05d4\u05dc\u05d5\u05de\u05d3\u05d9\u05dd \u05d9\u05d5\u05e4\u05e0\u05d5 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05ea\u05e8\u05d2\u05d9\u05dc\u05d9\u05dd.",
     "Contact support": "Contact support"
 }
