--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -950,7 +950,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1006,5 +1006,24 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Eventi",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Informazioni sul corso",
+    "Learning paths": "Moduli didattici",
+    "Links": "Collegamenti",
+    "Tests": "Test",
+    "Announcements": "Avvisi",
+    "Forum": "Forum",
+    "Surveys": "Questionari",
+    "Wiki": "Wiki",
+    "Glossary": "Glossario",
+    "Notebook": "Appunti",
+    "Attendances": "Presenze",
+    "Course progress": "Avanzamento Corso",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "Il lancio automatico del forum \u00e8 attivato. Gli studenti saranno rediretti al forum entrando nel corso",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "L'avvio automatico delle esercitazioni \u00e8 abilitato. G>li studenti verranno automaticamente reindirizzati all'esercitazione selezionata.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Il lancio automatico dei moduli didattici \u00e8 attivo. I corsisti verranno rediretti al modulo appena entrati nel corso.",
     "Contact support": "Contact support"
 }
