--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -732,7 +732,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -788,5 +788,13 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Learning paths": "\u041f\u0430\u0442\u0435\u043a\u0430 \u043d\u0430 \u0443\u0447\u0435\u045a\u0435\u0442\u043e",
+    "Links": "\u041b\u0438\u043d\u043a\u043e\u0432\u0438",
+    "Tests": "\u0422\u0435\u0441\u0442\u043e\u0432\u0438",
+    "Announcements": "\u0418\u0437\u0432\u0435\u0441\u0442\u0443\u0432\u0430\u045a\u0430",
+    "Forum": "\u0424\u043e\u0440\u0443\u043c\u0438",
     "Contact support": "Contact support"
 }
