--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -993,7 +993,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1049,5 +1049,26 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostische afronding",
+    "DiagnosticfinalizationmessageContent": "Hallo {0}, ik ben {1} en ik beoordeel uw diagnostische test om de cursus te bepalen die u zult volgen.",
+    "Events": "Evenementen",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Cursusomschrijving",
+    "Learning paths": "Leerpad",
+    "Links": "Links",
+    "Tests": "Oefeningen",
+    "Announcements": "Aankondigingen",
+    "Forum": "Forums",
+    "Surveys": "Enquete",
+    "Wiki": "Groupswiki",
+    "Glossary": "Woordenlijst",
+    "Notebook": "Notities",
+    "Attendances": "Aanwezigheid",
+    "Course progress": "Voortgang",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "De instelling voor automatisch starten van het forum staat aan. Leerlingen worden doorgestuurd naar de forumtool bij het betreden van deze cursus.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "De auto-start functie instelling van de oefeningen is ingeschakeld. Studenten zullen automatisch doorgezonden worden naar de geselecteerde oefening.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "De auto-start functie van het leerpad is ingeschakeld. Wanneer studenten deze cursus openen, zullen ze automatisch doorgezonden worden naar het leerpad wat is aangeduid als auto-start.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "De configuratie voor automatisch starten van documenten is ingeschakeld. Cursisten worden automatisch doorgestuurd naar de documenttool.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "De configuratie voor het automatisch starten van oefeningen is ingeschakeld. Cursisten worden automatisch doorgestuurd naar de lijst met oefeningen.",
     "Contact support": "Contact support"
 }
