--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -898,7 +898,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -954,5 +954,23 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Wydarzenia",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Opis kursu",
+    "Learning paths": "\u015acie\u017cka nauczania",
+    "Links": "Linki",
+    "Tests": "Testy",
+    "Announcements": "Og\u0142oszenia",
+    "Forum": "Fora",
+    "Surveys": "Ankiety",
+    "Wiki": "Wiki",
+    "Glossary": "S\u0142ownik",
+    "Notebook": "Notatnik",
+    "Attendances": "Obecno\u015bci",
+    "Course progress": "Post\u0119p kursu",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Funkcja automatycznego uruchamiania \u0107wicze\u0144 jest w\u0142\u0105czona. Studenci b\u0119d\u0105 automatycznie kierowani do wybranego \u0107wiczenia.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Funkcja automatycznego uruchamiania \u015bcie\u017cki nauczania jest w\u0142\u0105czona. Po rozpocz\u0119ciu kursu, studenci b\u0119d\u0105 automatycznie kierowani do \u015bcie\u017cki nauczania oznaczonej jako auto-start.",
     "Contact support": "Contact support"
 }
