--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -917,7 +917,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -973,5 +973,22 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Descri\u00e7\u00e3o do curso",
+    "Learning paths": "Cursos",
+    "Links": "Liga\u00e7\u00f5es/links",
+    "Tests": "Exerc\u00edcios",
+    "Announcements": "An\u00fancios",
+    "Forum": "F\u00f3runs",
+    "Surveys": "Pesquisas",
+    "Wiki": "Wiki",
+    "Glossary": "Gloss\u00e1rio",
+    "Notebook": "Bloco de notas",
+    "Attendances": "Presen\u00e7as",
+    "Course progress": "Progresso no curso",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "A op\u00e7\u00e3o de in\u00edcio autom\u00e1tico do exerc\u00edcio est\u00e1 ativa. Os alunos ser\u00e3o automaticamente redirecionados para o exerc\u00edcio selecionado",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Configura o auto-iniciar do Percurso de Aprendizagem para ON . Quando os estudantes acederem um curso, eles ser\u00e3o automaticamente redireccionados para o Percurso de Aprendizagem marcada como inicializa\u00e7\u00e3o autom\u00e1tica.",
     "Contact support": "Contact support"
 }
