--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -921,7 +921,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -977,5 +977,22 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Evenimente",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Descrierea cursului",
+    "Learning paths": "Cale",
+    "Links": "Linkuri",
+    "Tests": "Exercitii",
+    "Announcements": "Anunturi",
+    "Forum": "Forumuri",
+    "Surveys": "Sondaje",
+    "Wiki": "Grup Wiki",
+    "Glossary": "Glosariu",
+    "Notebook": "Notite personale",
+    "Attendances": "Asistenta",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Configuratia pentru desplegarea automatica a Exercitiilor este activata.Elevii vor fi trimisi la lectia selectionata cand vor intra in curs pentru a se arata automatic",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Configuratia pentru desplegarea automatica a Lectiilor este activata.Elevii vor fi trimisi la lectia selectionata cand vor intra in curs pentru a se arata automatic",
     "Contact support": "Contact support"
 }
