--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -745,7 +745,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -801,5 +801,15 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Diagnosis Management": "Diagnosis Management",
+    "Learning paths": "\u0423\u0447\u0435\u0431\u043d\u044b\u0439 \u043f\u043b\u0430\u043d",
+    "Links": "\u0421\u0441\u044b\u043b\u043a\u0438",
+    "Tests": "\u0422\u0435\u0441\u0442\u044b",
+    "Announcements": "\u041e\u0431\u044a\u044f\u0432\u043b\u0435\u043d\u0438\u044f",
+    "Forum": "\u0424\u043e\u0440\u0443\u043c\u044b",
+    "Surveys": "\u041e\u043f\u0440\u043e\u0441\u043d\u0438\u043a\u0438",
+    "Course progress": "\u041f\u0440\u043e\u0433\u0440\u0435\u0441\u0441 \u043f\u043e \u043a\u0443\u0440\u0441\u0443",
     "Contact support": "Contact support"
 }
