--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -937,7 +937,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -993,5 +993,23 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Udalosti",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Popis kurzu",
+    "Learning paths": "U\u010debn\u00e1 osnova",
+    "Links": "Odkazy",
+    "Tests": "Testy",
+    "Announcements": "Oznamy",
+    "Forum": "F\u00f3rum",
+    "Surveys": "Prieskum",
+    "Wiki": "Wiki",
+    "Glossary": "Slovn\u00edk",
+    "Notebook": "Z\u00e1pisn\u00edk",
+    "Attendances": "Doch\u00e1dzka",
+    "Course progress": "Pokrok v kurze",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Funkcia konfigur\u00e1cie automatick\u00e9ho spustenia Cvi\u010denie je povolen\u00e1. \u0160tudenti bud\u00fa automaticky presmerovan\u00ed na vybran\u00e9 cvi\u010denia.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Nastavenie automatick\u00e9ho spustenia u\u010debnej osnovy je ZAPNUT\u00c9. Ke\u010f \u017eiaci vst\u00fapia do tohto kurzu, bud\u00fa automaticky presmerovan\u00ed na u\u010debn\u00fa osnovu ozna\u010den\u00fa ako auto-\u0161tart.",
     "Contact support": "Contact support"
 }
