--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -981,7 +981,7 @@
     "Please contact support with the error details": "Please contact support with the error details",
     "Click the image to crop it (1:1 ratio, 120x120 px recommended)": "Click the image to crop it (1:1 ratio, 120x120 px recommended)",
     "Use the crop tool to select a 1:1 region": "Use the crop tool to select a 1:1 region",
-    "All messages here are automatically marked as promoted": "All messages here are automatically marked as promoted",
+    "All messages here are automatically marked as promoted.": "All messages here are automatically marked as promoted.",
     "Checking push subscription": "Checking push subscription",
     "You're subscribed to push notifications in this browser": "You're subscribed to push notifications in this browser",
     "Push notifications are not enabled in this browser": "Push notifications are not enabled in this browser",
@@ -1037,5 +1037,26 @@
     "You should create the \\\"Term and Conditions\\\" for all the available languages": "You should create the \\\"Term and Conditions\\\" for all the available languages",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "You have received a new friend request": "You have received a new friend request",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Events": "Dogodki",
+    "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Podrobnosti te\u010daja",
+    "Learning paths": "U\u010dna pot",
+    "Links": "Povezave",
+    "Tests": "Vaje",
+    "Announcements": "Obvestila",
+    "Forum": "Forumi",
+    "Surveys": "Evalvacijski vpra\u0161alniki",
+    "Wiki": "Wiki",
+    "Glossary": "Glosarij",
+    "Notebook": "Bele\u017eka",
+    "Attendances": "Prisotnosti",
+    "Course progress": "Napredek te\u010daja",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "\u010ce je ta mo\u017enost izbrana, bodo te\u010dajniki po vstopu v te\u010daj avtomati\u010dno preusmerjeni na strani forumov.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "Zmo\u017enost avtomat\u010dne preusmeritve je omogo\u010dena. Te\u010dajnik bo avtomati\u010dno preusmerjen na izbran test/vajo.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "Nastavitev samodejnega zagona u\u010dne poti je VKLJU\u010cENA. Ko te\u010dajniki dostopijo do tega te\u010daja, bodo samodejno preusmerjeni v u\u010dno pot, ki je ozna\u010dena za samodejni zagon.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "Mo\u017enost avtomati\u010dnega zagona dokumenta je omogo\u010dena. U\u010de\u010di bo avtomati\u010dno preusmerjen v orodje dokumentov.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "Mo\u017enost avtomati\u010dnega zagona testov je omogo\u010dena. U\u010de\u010di bodo avtomati\u010dno preusmerjeni na seznam testov/vaj.",
     "Contact support": "Contact support"
 }
