Language: Minor: Fix French translation

--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -82,7 +82,7 @@
     "Update": "Actualiser",
     "Add a course introduction to display to your students.": "Ajoutez une introduction de cours pour vos apprenants.",
     "Assessments": "Cahier de notes",
-    "Assignments": "Travaux d'\u00e9tudiants",
+    "Assignments": "Travaux",
     "Reporting": "Suivi",
     "Edit profile": "\u00c9diter le profil",
     "Clear filter results": "Nettoyer le filtre de r\u00e9sultats",
