--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -4694,7 +4694,7 @@ msgid "This will allow the use of a title for document names instead of document
 msgstr "Ceci permettra d'utiliser un titre pour le nom du document plutôt que nom_document.ext"
 
 msgid "Assignments"
-msgstr "Travaux d'étudiants"
+msgstr "Travaux"
 
 msgid "Deleted files cannot be restored"
 msgstr "Les fichiers effacés sont supprimés définitivement"
