Language: Add/Update terms

--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -44,7 +44,7 @@
     "Course introduction": "Introduction de cours",
     "Tools": "Outils",
     "Loading": "Chargement",
-    "Loading...": "Loading...",
+    "Loading...": "Chargement...",
     "Course language": "Langue du cours",
     "Department": "D\u00e9partement",
     "Department URL": "URL du d\u00e9partement",
