--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -55,7 +55,7 @@
     "Start Date": "Datum za\u010d\u00e1tku",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registrace",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
