--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -96,7 +96,7 @@
     "No course available": "No course available",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Contact": "Contact",
     "Registration": "Registration",
     "Current session tab": "Current",
