--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -53,7 +53,7 @@
     "No course available": "\uacfc\uc815 \uc5c6\uc74c",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\ub4f1\ub85d",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
