--- a/assets/locales/ms_MY.json
+++ b/assets/locales/ms_MY.json
@@ -37,7 +37,7 @@
     "No course available": "tiada subjek",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
     "Past session tab": "Past",
