--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -95,7 +95,7 @@
     "No course available": "brez te\u010daja",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Contact": "Kontakt",
     "Registration": "Dovoljenje za samoregistracijo",
     "Current session tab": "Current",
