--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -72,7 +72,7 @@
     "No course available": "\u6ca1\u6709\u8bfe\u7a0b",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\u6ce8\u518c",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
