--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -69,7 +69,7 @@
     "No course available": "\u6c92\u6709\u8ab2\u7a0b",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\u8a3b\u518a",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
