--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -94,7 +94,7 @@
     "No course available": "\u0644\u0627 \u064a\u0648\u062c\u062f \u0645\u0642\u0631\u0631",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Contact": "\u062c\u0647\u0629 \u0627\u0644\u0627\u062a\u0635\u0627\u0644",
     "Registration": " \u062a\u0633\u062c\u064a\u0644",
     "Current session tab": "Current",
