--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -79,7 +79,7 @@
     "No course available": "ensin cursos",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Rexistru",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
