--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -79,7 +79,7 @@
     "No course available": "\u043d\u044f\u043c\u0430 \u043a\u0443\u0440\u0441\u043e\u0432\u0435",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\u0421\u0430\u043c\u043e\u0441\u0442\u043e\u044f\u0442\u0435\u043b\u043d\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f \u043d\u0430 \u043f\u043e\u0442\u0440\u0435\u0431\u0438\u0442\u0435\u043b\u0438\u0442\u0435",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
