--- a/assets/locales/bs_BA.json
+++ b/assets/locales/bs_BA.json
@@ -21,7 +21,7 @@
     "Go to the session": "Go to the session",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
     "Past session tab": "Past",
