--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -59,7 +59,7 @@
     "No course available": "ne kurso",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registrado",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
