--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -89,7 +89,7 @@
     "No course available": "Ikastaro erabilgarririk gabe",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Erregistroa",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
