--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -84,7 +84,7 @@
     "No course available": "\u062f\u0631\u0633\u06cc \u0645\u0648\u062c\u0648\u062f \u0646\u0645\u06cc \u0628\u0627\u0634\u062f",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\u062b\u0628\u062a\u0646\u0627\u0645",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
