--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -94,7 +94,7 @@
     "No course available": "\u05d0\u05d9\u05df \u05e7\u05d5\u05e8\u05e1 \u05d6\u05de\u05d9\u05df",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Contact": "\u05e6\u05d5\u05e8 \u05e7\u05e9\u05e8",
     "Registration": "\u05d4\u05e8\u05e9\u05de\u05d4",
     "Current session tab": "Current",
