--- a/assets/locales/hr_HR.json
+++ b/assets/locales/hr_HR.json
@@ -76,7 +76,7 @@
     "No course available": "nema kolegija",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registracija",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
