--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -73,7 +73,7 @@
     "No course available": "nincs kurzus",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Regisztr\u00e1ci\u00f3",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
