--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -67,7 +67,7 @@
     "No course available": "kurs\u0173 n\u0117ra",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registracija",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
