--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -67,7 +67,7 @@
     "No course available": "\u043d\u0435\u043c\u0430 \u043a\u0443\u0440\u0441\u0435\u0432\u0438",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0458\u0430",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
