--- a/assets/locales/nn_NO.json
+++ b/assets/locales/nn_NO.json
@@ -43,7 +43,7 @@
     "Start Date": "Startdato",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registrering",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
