--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -88,7 +88,7 @@
     "No course available": "brak kursu",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Rejestracja",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
