--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -88,7 +88,7 @@
     "No course available": "nenhum curso",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registro/inscri\u00e7\u00e3o",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
