--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -92,7 +92,7 @@
     "No course available": "nici un curs",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Inregistrare",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
