--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -70,7 +70,7 @@
     "No course available": "\u043a\u0443\u0440\u0441\u0430 \u043d\u0435\u0442",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
