--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -92,7 +92,7 @@
     "No course available": "\u017diadny kurz",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registr\u00e1cia",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
