--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -72,7 +72,7 @@
     "No course available": "ingen kurs",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Registration": "Registrering",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
