--- a/assets/locales/vi_VN.json
+++ b/assets/locales/vi_VN.json
@@ -37,7 +37,7 @@
     "No course available": "kh\u00f4ng c\u00f3 kh\u00f3a h\u1ecdc",
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
-    "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
+    "There is no terms that matches the search: %s": "There is no terms that matches the search: {0}",
     "Current session tab": "Current",
     "Upcoming session tab": "Upcoming",
     "Past session tab": "Past",
